Add HistoricRatesModelTest